rota de listar serviço adicionada ao instrutor
