# controllers/instrutorController.js
@@ -85,31 +85,6 @@ const instrutorController = {
         }
     },
     
-    test: async (req, res) => {
-        try {
-            const { matriculaI } = req.params;
-    
-            const registros = await Registro.findAll({
-                attributes: ['id','titulo', 'dataServico', 'horaInicio', 'horaFinal', 'total', 'status'],
-                include: [{
-                    model: Servico,
-                    attributes: ['nome'],
-                    where: {
-                        id: sequelize.col('Registro.FKservico')
-                    }
-                }],
-            });
-
-            if (registros.length === 0) {
-                return res.status(404).json({ error: "Registros não encontrados" });
-            }
-    
-            res.status(200).json({ msg: "Registros encontrados", data: registros });
-        } catch (error) {
-            res.status(500).json({ error: error.message });
-        }
-    },
-
     editarRegistro: async (req, res) => {
         try {
             const { matriculaI, registroId } = req.params;
@@ -199,6 +174,39 @@ const instrutorController = {
             const instrutor = await buscarInstrutor(matriculaI);
 
             res.status(200).json(instrutor);
+        } catch (error) {
+            res.status(500).json({ error: error.message });
+        }
+    },
+
+    test: async (req, res) => {
+        try {
+    
+            const registros = await Registro.findAll({
+                attributes: ['id','titulo', 'dataServico', 'horaInicio', 'horaFinal', 'total', 'status'],
+                include: [{
+                    model: Servico,
+                    attributes: ['nome'],
+                    where: {
+                        id: sequelize.col('Registro.FKservico')
+                    }
+                }],
+            });
+
+            if (registros.length === 0) {
+                return res.status(404).json({ error: "Registros não encontrados" });
+            }
+    
+            res.status(200).json({ msg: "Registros encontrados", data: registros });
+        } catch (error) {
+            res.status(500).json({ error: error.message });
+        }
+    },
+
+    listaAtvs: async (req, res)=> {
+        try {
+            const servicos = await Servico.findAll({attributes: ['id', 'nome']});
+            res.json(servicos);
         } catch (error) {
             res.status(500).json({ error: error.message });
         }
